# Readme_MD_Generator

./: README.md  app.py  hello.py  pyproject.toml  requirements.txt  template.py
research/: trails.ipynb
src/: helper.py
