[project]
name = "readme-md-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.11.0",
    "google-generativeai>=0.8.5",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.23",
    "langchain-openai>=0.3.16",
    "pandas>=2.2.3",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.0",
]
